project 2 part 2
