# server.js
@@ -5,6 +5,7 @@ const swaggerDocument = require('./swagger-output.json');
 const { connectDb } = require('./db/connect');
 const gamesRoute = require('./routes/gamesRoute');
 const studiosRoute = require('./routes/studiosRoute');
+const authRoute = require('./routes/authRoute');
 
 const app = express();
 const PORT = process.env.PORT || 8080;
@@ -32,11 +33,12 @@ swaggerDocument.schemes = [swaggerScheme];
 app.use(express.json());
 app.use((req, res, next) => {
   res.setHeader('Access-Control-Allow-Origin', '*');
-  res.setHeader('Access-Control-Allow-Headers', 'Origin, X-Requested-With, Content-Type, Accept');
+  res.setHeader('Access-Control-Allow-Headers', 'Origin, X-Requested-With, Content-Type, Accept, Authorization');
   res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
   next();
 });
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use('/auth', authRoute);
 app.use('/games', gamesRoute);
 app.use('/studios', studiosRoute);
 
